Mon Jul 20 21:28:18 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (gtk_ctree_post_recursive_to_depth)
 	(gtk_ctree_pre_recursive_to_depth): new functions, recursive process
	tree to specified depth
	(gtk_ctree_expand_to_depth): expand tree to specified depth
 	(gtk_ctree_collapse_to_depth): collapse all nodes with level >= depth

Sun Jul 19 23:51:05 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (scroll_vertical): fix for vertical scrolling in case
	of GTK_CLIST_ADD_MOD
	* gtk/testgtk.c (add1000_clist): changed pixmap

Sat Jul 18 22:59:04 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.h: 
	* gtk/gtkmain.c: export gtk_binary_age and gtk_interface_age.

	* gtk/gtktypeutils.h:
	* gtk/gtkitemfactory.h: remove "void" from prototypes again.

Sat Jul 18 00:54:01 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_set_child_arg): added support for
  	CHILD_ARG_MENU_LABEL, CHILD_ARG_TAB_LABEL
	(gtk_notebook_get_child_arg): added support for CHILD_ARG_MENU_LABEL,
	CHILD_ARG_POSITION
	(gtk_notebook_reorder_child): new funktion to change position of a
	notebook page
	(gtk_notebook_draw_arrow): draw left/right arrow with
	GTK_SHADOW_ETCHED_IN if focus_tab is first/last tab.

	* gtk/gtkstyle.c (gtk_default_draw_arrow):
	added GTK_SHADOW_ETCHED_IN/OUT

Sun Jul 19 12:19:16 1998  Stefan Jeske  <stefan@gtk.org>

	* gtk/gtkprogress.c gtk/gtkprogress.h gtk/gtkprogressbar.c
	  gtk/gtkprogressbar.h gtk/Makefile.am gtk/gtk.h gtk/testgtk.c:
	Introduced generic GtkProgress widget. Derived GtkProgressBar from
	GtkProgress. Made GtkProgressBar much more flexible (see testgtk).

Fri Jul 17 23:49:28 PDT 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtktypeutils.h
	* gtk/gtkitemfactory.h: explicitly specify void in prototype

Fri Jul 17 17:54:02 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (scroll_vertical): fix to avoid flicker at begin/end
	of list

Fri Jul 17 05:30:47 1998  Tim Janik  <timj@gtk.org>
